# cli-server-python

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-run.sh  pyproject.toml
.github/workflows/: build.yml  publish.yml
demo/: Dockerfile  main.py  package-lock.json  package.json  requirements.txt
demo/jobs/: __init__.py  sample_health_check_job.py
demo/processors/: __init__.py  cli_echo_command_processor.py  cli_hello_command_processor.py  cli_math_command_processor.py  cli_status_command_processor.py  cli_time_command_processor.py
plugins/admin/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
plugins/admin/qodalis_cli_admin/: __init__.py  cli_admin_builder.py  dashboard_resolver.py  spa_static_files.py
plugins/admin/qodalis_cli_admin/auth/: __init__.py  auth_controller.py  auth_middleware.py  jwt_service.py
plugins/admin/qodalis_cli_admin/controllers/: __init__.py  config_controller.py  logs_controller.py  plugins_controller.py  status_controller.py  ws_clients_controller.py
plugins/admin/qodalis_cli_admin/services/: __init__.py  admin_config.py  log_ring_buffer.py  module_registry.py
plugins/admin/scripts/: copy_dashboard.py
plugins/aws/: README.md  setup.py
plugins/aws/qodalis_cli_aws/: __init__.py  aws_module.py
plugins/aws/qodalis_cli_aws/processors/: aws_command_processor.py  cloudwatch_processor.py  dynamodb_processor.py  ec2_processor.py  ecs_processor.py  iam_processor.py  lambda_processor.py  s3_processor.py  sns_processor.py  sqs_processor.py
plugins/aws/qodalis_cli_aws/services/: __init__.py  aws_config_service.py  aws_credential_manager.py
plugins/aws/qodalis_cli_aws/utils/: output_helpers.py
plugins/aws/tests/: conftest.py  test_aws_config_service.py
plugins/data-explorer/: README.md  pyproject.toml
plugins/data-explorer-elasticsearch/: README.md  pyproject.toml
plugins/data-explorer-elasticsearch/qodalis_cli_data_explorer_elasticsearch/: __init__.py  elasticsearch_provider.py
plugins/data-explorer-mongo/: README.md  pyproject.toml
plugins/data-explorer-mongo/qodalis_cli_data_explorer_mongo/: __init__.py  mongo_provider.py
plugins/data-explorer-mssql/: README.md  pyproject.toml
plugins/data-explorer-mssql/qodalis_cli_data_explorer_mssql/: __init__.py  mssql_provider.py
plugins/data-explorer-mysql/: README.md  pyproject.toml
plugins/data-explorer-mysql/qodalis_cli_data_explorer_mysql/: __init__.py  mysql_provider.py
plugins/data-explorer-postgres/: README.md  pyproject.toml
plugins/data-explorer-postgres/qodalis_cli_data_explorer_postgres/: __init__.py  postgres_provider.py
plugins/data-explorer-redis/: README.md  pyproject.toml
plugins/data-explorer-redis/qodalis_cli_data_explorer_redis/: __init__.py  redis_provider.py
plugins/data-explorer-sql/: README.md  pyproject.toml
plugins/data-explorer-sql/qodalis_cli_data_explorer_sql/: __init__.py  sql_provider.py
plugins/data-explorer/qodalis_cli_data_explorer/: __init__.py  data_explorer_controller.py  data_explorer_executor.py  data_explorer_registry.py
plugins/filesystem/: README.md  __init__.py  errors.py  i_file_storage_provider.py  models.py  pyproject.toml
plugins/filesystem-json/: README.md  __init__.py  json_file_provider.py  pyproject.toml
plugins/filesystem-json/qodalis_cli_filesystem_json/: json_file_provider.py
plugins/filesystem-s3/: README.md  __init__.py  pyproject.toml  s3_provider.py
plugins/filesystem-s3/qodalis_cli_filesystem_s3/: __init__.py  s3_provider.py
plugins/filesystem-sqlite/: README.md  __init__.py  pyproject.toml  sqlite_provider.py
plugins/filesystem-sqlite/qodalis_cli_filesystem_sqlite/: __init__.py  sqlite_provider.py
plugins/filesystem/providers/: __init__.py  in_memory_provider.py  os_provider.py
plugins/filesystem/qodalis_cli_filesystem/: __init__.py  errors.py  i_file_storage_provider.py  models.py
plugins/filesystem/qodalis_cli_filesystem/providers/: in_memory_provider.py  os_provider.py
plugins/jobs/: README.md  pyproject.toml
plugins/jobs/qodalis_cli_jobs/: __init__.py  cli_job_execution_context.py  cli_job_logger.py  cli_job_scheduler.py  cli_jobs_builder.py  cli_jobs_controller.py  in_memory_job_storage_provider.py  interval_parser.py
plugins/weather/: README.md  __init__.py  pyproject.toml  weather_module.py
plugins/weather/qodalis_cli_weather/: __init__.py  weather_module.py
src/qodalis_cli/: __init__.py  create_cli_server.py  server.py
src/qodalis_cli/abstractions/: __init__.py  cli_command_author.py  cli_command_parameter_descriptor.py  cli_command_processor.py  cli_process_command.py
src/qodalis_cli/controllers/: __init__.py  cli_controller.py  cli_controller_v2.py  cli_jobs_controller.py  cli_version_controller.py  filesystem_controller.py
src/qodalis_cli/extensions/: __init__.py  cli_builder.py
src/qodalis_cli/filesystem/: __init__.py  filesystem_options.py  filesystem_path_validator.py
src/qodalis_cli/jobs/: __init__.py  cli_job_scheduler.py  interval_parser.py
src/qodalis_cli/models/: __init__.py  cli_server_command_descriptor.py  cli_server_output.py  cli_server_response.py
src/qodalis_cli/processors/: __init__.py  cli_base64_command_processor.py  cli_echo_command_processor.py  cli_hash_command_processor.py  cli_http_command_processor.py  cli_status_command_processor.py  cli_system_command_processor.py  cli_uuid_command_processor.py
src/qodalis_cli/services/: __init__.py  cli_command_executor_service.py  cli_command_registry.py  cli_event_socket_manager.py  cli_log_socket_manager.py  cli_response_builder.py  cli_shell_session_manager.py
tests/: conftest.py  test_admin_plugin.py  test_api_version.py  test_cli_log_socket_manager.py  test_command_executor.py  test_command_registry.py  test_controllers.py  test_data_explorer_providers.py  test_filesystem_controller.py  test_in_memory_provider.py  test_jobs.py  test_jobs_controller.py  test_json_file_provider.py  test_response_builder.py  test_s3_provider.py  test_sqlite_provider.py
