[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qodalis-cli-server"
version = "1.0.0b4"
description = "A Python CLI server framework for the Qodalis CLI ecosystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nicolae Lupei", email = "nicolae.lupei@qodalis.com" },
]
keywords = ["cli", "server", "terminal", "qodalis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "qodalis-cli-server-abstractions",
    "qodalis-cli-server-plugin-filesystem",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
    "python-multipart>=0.0.6",
]

[project.urls]
Homepage = "https://github.com/qodalis-solutions/cli-server-python"
Repository = "https://github.com/qodalis-solutions/cli-server-python"
Issues = "https://github.com/qodalis-solutions/cli-server-python/issues"

[project.scripts]
qodalis-cli-server = "qodalis_cli.server:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/qodalis_cli"]
