[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qodalis-cli-server-plugin-data-explorer-postgres"
version = "1.0.0b2"
description = "PostgreSQL Data Explorer provider plugin for Qodalis CLI servers"
readme = { text = "", content-type = "text/plain" }
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nicolae Lupei", email = "nicolae.lupei@qodalis.com" },
]
keywords = ["cli", "qodalis", "data-explorer", "postgres", "postgresql", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "qodalis-cli-server-abstractions",
    "asyncpg>=0.29.0",
]

[project.urls]
Homepage = "https://github.com/qodalis-solutions/cli-server-python"
Repository = "https://github.com/qodalis-solutions/cli-server-python"

[tool.hatch.build.targets.wheel]
packages = ["qodalis_cli_data_explorer_postgres"]

[tool.hatch.build.targets.sdist]
include = ["qodalis_cli_data_explorer_postgres/**"]
