[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qodalis-cli-server-plugin-jobs"
version = "1.0.0b1"
description = "Background job scheduler plugin for Qodalis CLI servers"
readme = { text = "", content-type = "text/plain" }
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nicolae Lupei", email = "nicolae.lupei@qodalis.com" },
]
keywords = ["cli", "qodalis", "jobs", "scheduler", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "qodalis-cli-server-abstractions",
    "croniter>=1.3.0",
    "fastapi>=0.100.0",
]

[project.urls]
Homepage = "https://github.com/qodalis-solutions/cli-server-python"
Repository = "https://github.com/qodalis-solutions/cli-server-python"
Issues = "https://github.com/qodalis-solutions/cli-server-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["qodalis_cli_jobs"]

[tool.hatch.build.targets.sdist]
include = ["qodalis_cli_jobs/**"]
